--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.56.0",
+    "@xyflow/react": "^12.3.6",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
