--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@xyflow/react": "^12.3.6",
     "next": "15.5.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
