--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.56.0",
     "@xyflow/react": "^12.3.6",
+    "chart.js": "^4.5.0",
     "next": "15.5.0",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "reactflow": "^11.11.4"
   },
