--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.56.0",
     "@xyflow/react": "^12.3.6",
     "chart.js": "^4.5.0",
+    "chartjs-plugin-zoom": "^2.2.0",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
