--- a/package.json
+++ b/package.json
@@ -9,16 +9,29 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.4",
+    "@react-three/fiber": "^9.3.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.56.0",
+    "@types/d3-drag": "^3.0.7",
+    "@types/d3-force": "^3.0.10",
+    "@types/d3-selection": "^3.0.11",
+    "@types/d3-zoom": "^3.0.8",
+    "@types/three": "^0.180.0",
     "@xyflow/react": "^12.3.6",
     "chart.js": "^4.5.0",
     "chartjs-plugin-zoom": "^2.2.0",
+    "d3-drag": "^3.0.0",
+    "d3-force": "^3.0.0",
+    "d3-selection": "^3.0.0",
+    "d3-zoom": "^3.0.0",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
-    "reactflow": "^11.11.4"
+    "react-force-graph-3d": "^1.29.0",
+    "reactflow": "^11.11.4",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
