--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@dagrejs/dagre": "^1.1.5",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.56.0",
     "@xyflow/react": "^12.3.6",
+    "buffer": "^6.0.3",
     "chart.js": "^4.5.0",
     "chartjs-plugin-zoom": "^2.2.0",
     "next": "15.5.0",
+    "process": "^0.11.10",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
@@ -32,6 +35,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.101.3"
   }
 }
