--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "@dagrejs/dagre": "^1.1.5",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.56.0",
+    "@types/d3-hierarchy": "^3.1.7",
     "@xyflow/react": "^12.3.6",
     "buffer": "^6.0.3",
     "chart.js": "^4.5.0",
     "chartjs-plugin-zoom": "^2.2.0",
+    "d3-drag": "^3.0.0",
+    "d3-force": "^3.0.0",
+    "d3-hierarchy": "^3.1.2",
+    "d3-selection": "^3.0.0",
+    "d3-zoom": "^3.0.0",
     "next": "15.5.0",
     "process": "^0.11.10",
     "react": "19.1.0",
