--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3-hierarchy": "^3.1.2",
     "d3-selection": "^3.0.0",
     "d3-zoom": "^3.0.0",
+    "elkjs": "^0.10.0",
     "next": "15.5.0",
     "process": "^0.11.10",
     "react": "19.1.0",
