feat: add ELK layout support to WorkflowPage and update npm dependencies

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -53,6 +53,13 @@
 				"$eslint - stylish"
 			],
 			"group": "build"
+		},
+		{
+			"label": "npm: install-elk",
+			"type": "shell",
+			"command": "npm i elkjs",
+			"isBackground": false,
+			"group": "build"
 		}
 	]
 }
