feat: add reparenting functionality and context menu support for nodes in WorkflowPage

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -90,6 +90,23 @@
 				"$tsc"
 			],
 			"group": "build"
+		},
+		{
+			"label": "typecheck",
+			"type": "shell",
+			"command": "npm run -s typecheck",
+			"isBackground": false,
+			"problemMatcher": [
+				"$tsc"
+			],
+			"group": "build"
+		},
+		{
+			"label": "typecheck",
+			"type": "shell",
+			"command": "npm run -s typecheck",
+			"isBackground": false,
+			"group": "build"
 		}
 	]
 }
